--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
 spring.application.name=Usuarios
+#configuracion de puerto
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/usuarios
-spring.datasource.username=root
-spring.datasource.password=
+#configuracion de base de dato
+spring.datasource.url=jdbc:mysql://54.146.238.158:3306/usuario
+spring.datasource.username=usuario
+spring.datasource.password=Miclave...2025
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#Swagger
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
+
+#Test started
+
+
+spring.profiles.active=dev
